# MarketSystem

./: .gitignore  Admin.cpp  Admin.h  AdminService.cpp  AdminService.h  AdminWindow.cpp  AdminWindow.h  AuthService.cpp  AuthService.h  DatabaseManager.cpp  DatabaseManager.h  LoginWindow.cpp  LoginWindow.h  MarketSystem.pro  User.cpp  User.h  main.cpp  mainwindow.cpp  mainwindow.h
.github/workflows/: ci.yml
tests/: CMakeLists.txt  Makefile  README.md  fuzz_market.cpp  fuzz_sql  fuzz_sql.c  moc_predefs.h  test_authservice.cpp  test_authservice_qt.cpp  test_authservice_qt.moc  test_databasemanager.cpp  test_databasemanager_qt.cpp  test_databasemanager_qt.moc  test_integration_ban_qt.cpp  test_integration_ban_qt.moc  test_integration_qt.cpp  test_integration_qt.moc  tests  tests.pro  tests_runner.cpp
tests/in/: seed1.sql
